--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IFC Viewer – ThatOpen</title>
-    <link rel="stylesheet" href="/src/style.css">
 </head>
 <body>
     <!-- Header -->
@@ -78,6 +77,6 @@
         </div>
     </aside>
 
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="./src/main.ts"></script>
 </body>
 </html>
